# Fly3D

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  main.cpp
Source/Runtime/: CMakeSetup.py
Source/Runtime/Allocator/: AllocatorType.cpp  AllocatorType.h  AllocatorType.inc  BaseAllocator.cpp  BaseAllocator.h  MemoryMacros.cpp  MemoryMacros.h  TLSFAllocator.cpp  TLSFAllocator.h
Source/Runtime/Core/: Globals.cpp  Globals.h  PlatformAtomics.h  PlatformMemory.h
Source/Runtime/Core/Containers/: Array.h  ContainerAllocationPolicies.h
Source/Runtime/Core/HAL/: FlyMemory.h
Source/Runtime/Log/: Assert.h  Log.h
Source/Runtime/Loop/: EngineLoop.cpp  EngineLoop.h
Source/Runtime/Math/: Color.cpp  Color.h  Math.h  Vector2D.cpp  Vector2D.h
Source/Runtime/Platform/: Configure.h  Platform.h
Source/Runtime/Platform/GenericPlatform/: GenericPlatform.h
Source/Runtime/Profiler/: MemoryProfiler.cpp  MemoryProfiler.h
Source/Runtime/TLSF/: tlsf.c  tlsf.h
Source/Runtime/Template/: AndOrNot.h  AreTypesEqual.h  ChooseClass.h  CopyQualifiersFromTo.h  Decay.h  EnableIf.h  Function.h  Greater.h  Invoke.h  IsArithmetic.h  IsConstructible.h  IsEnum.h  IsEnumClass.h  IsFloatingPoint.h  IsIntegral.h  IsInvocable.h  IsMemberPointer.h  IsPODType.h  IsPointer.h  IsTriviallyCopyConstructible.h  IsTriviallyDestructible.h  MemoryOps.h  Noncopyable.h  PointerIsConvertibleFromTo.h  RemoveCV.h  RemoveExtent.h  RemovePointer.h  RemoveReference.h  SharedPointer.h  Template.h  TypeCompatibleBytes.h  TypeTraits.h
Source/Runtime/Utilities/: Align.h
Source/Runtime/Windows/: WindowDefinition.h  WindowsApplication.cpp  WindowsApplication.h  WindowsMisc.cpp  WindowsMisc.h  WindowsWindow.cpp  WindowsWindow.h
